--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,6 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 
 #logging
-logging.level.org.springframework.data=debug
-logging.level.=debug
+logging.level.=INFO
+logging.level.org.springframework.data=INFO
+logging.level.com.example=DEBUG
